[build-system]
requires = ["scikit-build-core", "setuptools", "wheel", "delocate>=0.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "test_wheel"
version = "0.1.0"
description = "Minimal pybind11 + ceres-solver demo with Conan"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.verbose = true

